--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 class="big" id="homeHeading">Claire L. Gervais</h1>
+                <h1 class="big" id="homeHeading">Claire L Gervais</h1>
                 <hr>
                 <p>The best damn Teacher ever!!!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -86,7 +86,7 @@
                     <h2 class="section-heading">Teaching your children since 2012</h2>
                     <hr class="light">
                     <p class="text-faded">Lorem ipsum dolor sit amet, id voluptua partiendo vis. Vis ut possim scaevola tacimates, in suas facilisis interesset sea. Mel clita audire habemus ex, ex eruditi repudiare cotidieque per. Velit conceptam ad per. Cu tota postulant referrentur cum. Ei sint sale assentior eam.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
